--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.33.0",
     "firebase": "^9.12.1",
+    "framer-motion": "^8.0.2",
     "react": "^18.2.0",
     "react-daisyui": "^2.4.4",
     "react-dom": "^18.2.0",
