--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.12.1",
     "framer-motion": "^8.0.2",
     "react": "^18.2.0",
+    "react-countup": "^6.4.0",
     "react-daisyui": "^2.4.4",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
